# CHIP8-EMU

./: CMakeLists.txt  README.md
CHIPPY/: main.cpp
CHIPPY/include/: Processor.h  Renderer.h  stack.h
CHIPPY/src/: Processor.cpp  Renderer.cpp
